--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  uuid: ^3.0.6
   get_storage: ^2.0.3
   get: ^4.6.6
   image_picker: ^0.8.5+3
