--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   image_picker: ^0.8.5+3
   sqflite: ^2.0.0+4
   path: ^1.8.0
-
+  intl: ^0.17.0
 
 
   # The following adds the Cupertino Icons font to your application.
