--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   intl: ^0.17.0
   flutter_multi_formatter: ^2.3.0
   numberpicker: ^2.1.1
+  audioplayers: ^6.1.0
+  vibration: ^1.7.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
