--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   numberpicker: ^2.1.1
   audioplayers: ^6.1.0
   vibration: ^1.7.3
+  image_cropper: ^8.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
